--- a/_config.yml
+++ b/_config.yml
@@ -35,12 +35,12 @@ sidebar_widget_phone: "+123 112 23445"
 
 # Social links
 twitter: 'JustGoodThemes'
-facebook: 'username'
+facebook: 'eulacia'
 github: 'JustGoodThemes'
 codepen: 'username'
 dribbble: 'username'
 medium: '@username'
-instagram: 'username'
+instagram: '@eulacia'
 pinterest: 'username'
 linkedin: 'username'
 
