--- a/_config.yml
+++ b/_config.yml
@@ -34,15 +34,9 @@ sidebar_widget_phone: "+123 112 23445"
 
 
 # Social links
-twitter: 'JustGoodThemes'
+twitter: 'rveulacia'
 facebook: 'eulacia'
-github: 'JustGoodThemes'
-codepen: 'username'
-dribbble: 'username'
-medium: '@username'
-instagram: '@eulacia'
-pinterest: 'username'
-linkedin: 'username'
+instagram: 'eulacia'
 
 # Navigation
 navigation:
