--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # If you change this file, please restart the server process.
 
 # Site setings
-name: 'Curious'
+name: 'townofSulaco'
 description: 'Bold Theme For Brave People'
 # Sidebar about text
 site_description: 'Welcome to my blog. It features topics such as fashion, architecture, travel & design. This blog is about finding balance in life, living with purpose, having fun, and doing what you love.'
