--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,3 +18,14 @@ nancy:
   cover: /assets/images/covers/5.jpg
   facebook: justgoodthemes
   twitter: justgoodthemes
+herve:
+  username: rve
+  name: Hervé Eulacia
+  url_full: https://townofsulaco.com/
+  url: townofsulaco.com
+  bio: Lives in Montreal with a man extraordinaire, works with people who make residential lending surprisingly fun and friendly, feels lucky all around.
+  picture: /assets/images/daniel.jpg
+  cover: /assets/images/covers/4.jpg
+  facebook: eulacia
+  twitter: rveulacia
+  instagram: eulacia
