--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,7 +20,7 @@ nancy:
   twitter: justgoodthemes
 herve:
   username: rve
-  name: Hervé Eulacia
+  name: Herve Eulacia
   url_full: https://townofsulaco.com/
   url: townofsulaco.com
   bio: Lives in Montreal with a man extraordinaire, works with people who make residential lending surprisingly fun and friendly, feels lucky all around.
