--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,7 +20,7 @@ nancy:
   twitter: justgoodthemes
 herve:
   username: rve
-  name: Herve Eulacia
+  name: Hervé Eulacia
   url_full: https://townofsulaco.com/
   url: townofsulaco.com
   bio: Lives in Montreal with a man extraordinaire, works with people who make residential lending surprisingly fun and friendly, feels lucky all around.
@@ -28,4 +28,3 @@ herve:
   cover: /assets/images/covers/4.jpg
   facebook: eulacia
   twitter: rveulacia
-  instagram: eulacia
