--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,7 +18,7 @@ nancy:
   cover: /assets/images/covers/5.jpg
   facebook: justgoodthemes
   twitter: justgoodthemes
-herve:
+rve:
   username: rve
   name: Hervé Eulacia
   url_full: https://townofsulaco.com/
