--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,7 +24,7 @@ rve:
   url_full: https://townofsulaco.com/
   url: townofsulaco.com
   bio: Lives in Montreal with a man extraordinaire, works with people who make residential lending surprisingly fun and friendly, feels lucky all around.
-  picture: /assets/images/daniel.jpg
-  cover: /assets/images/covers/4.jpg
+  picture: /assets/images/rve.jpeg
+  cover: /assets/images/covers/rvecover.jpeg
   facebook: eulacia
   twitter: rveulacia
